[FIX] sap.m.Checkbox: Correct non-editable checkbox alignment
- Problem:
Display-only checkboxes in non-editable forms were misaligned vertically.

- Solution:
Introduced separate top offsets:
  - Base fix (top: 0.0775rem) ensures correct alignment in Compact mode.
  - Cozy-specific override (top: -0.1075rem) restores proper centering in Cozy mode using sapUiSizeCozy .

SNOW: DINC0534820

--- a/src/sap.m/src/sap/m/themes/base/CheckBox.less
+++ b/src/sap.m/src/sap/m/themes/base/CheckBox.less
@@ -246,6 +246,10 @@ html[data-sap-ui-browser^=ff] .sapMCbBg > input {
 		width: 2rem;
 	}
 
+	.sapUiForm:not(.sapUiFormEdit-CTX) .sapMCb.sapMCbDisplayOnly .sapMCbBg {
+		top: 0.0775rem;
+	}
+
 	.sapMCb.sapMCbDisplayOnly:not(.sapMCbBgDis) {
 		padding-left: 2rem;
 	}
