--- a/src/themelib_sap_horizon/src/sap/m/themes/sap_horizon/CheckBox.less
+++ b/src/themelib_sap_horizon/src/sap/m/themes/sap_horizon/CheckBox.less
@@ -110,7 +110,7 @@
 }
 
 .sapUiForm:not(.sapUiFormEdit-CTX) .sapMCb.sapMCbDisplayOnly .sapMCbBg {
-	top: -0.1475rem;
+	top: -0.1075rem;
 }
 
 .sapMCbDisplayOnly .sapMCbBg {
